# foamium

./: Cargo.toml  README.md  WALKTHROUGH.md
.github/workflows/: flatpak.yml
flatpak/: generate-cargo-sources.py  org.foamium.Browser.Beta.desktop  org.foamium.Browser.Beta.metainfo.xml  org.foamium.Browser.Beta.yml  org.foamium.Browser.Nightly.desktop  org.foamium.Browser.Nightly.metainfo.xml  org.foamium.Browser.Nightly.yml  org.foamium.Browser.desktop  org.foamium.Browser.metainfo.xml  org.foamium.Browser.yml
foamium_app/: Cargo.toml
foamium_app/src/: database.rs  main.rs
foamium_css/: Cargo.toml
foamium_css/src/: lib.rs
foamium_dom/: Cargo.toml
foamium_dom/src/: lib.rs
foamium_installer/: Cargo.toml
foamium_installer/src/: main.rs
foamium_layout/: Cargo.toml
foamium_layout/src/: lib.rs
foamium_net/: Cargo.toml
foamium_net/src/: lib.rs
foamium_render/: Cargo.toml
foamium_render/src/: lib.rs
resources/: org.foamium.Browser.desktop
resources/branding/: README.md
resources/fonts/: default.css
resources/pages/: README.md  blank.html  error.html  history.html  warning.html
web/: index.html  style.css
