[package]
name = "foamium_app"
version = "0.1.0"
edition = "2021"

[features]
default = ["nightly"] # Default to nightly for development
stable = []
beta = []
nightly = []

[dependencies]

gtk4 = { version = "0.10", package = "gtk4", features = ["v4_10"] }
libadwaita = { version = "0.8", package = "libadwaita", features = ["v1_4"] }
webkit6 = { version = "0.5.0", features = ["v2_42"] }
env_logger = "0.11"
log = "0.4"
urlencoding = "2.1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
url = "2.5"
